--- a/src/pages/setting/personal-information.astro
+++ b/src/pages/setting/personal-information.astro
@@ -278,7 +278,8 @@ import Layout from "../../layouts/Layout.astro";
                     >ZIP / Postal code</label
                   >
                   <input
-                    type="text"
+                    type="tel"
+                    pattern="[0-9]*"
                     name="postal-code"
                     id="postal-code"
                     autocomplete="postal-code"
