--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -1,39 +1,12 @@
 ---
 import AdminLayout from "../../layouts/AdminLayout.astro";
-import Sidebar from "../../components/admin/Sidebar";
-import Header from "../../components/admin/Header";
-
-import React, { useState } from 'react';
-
-const SidebarComponent = () => {
-    const [sidebarOpen, setSidebarOpen] = useState(false);
-
-    return (
-        <Sidebar sidebarOpen={sidebarOpen} setSidebarOpen={setSidebarOpen} />
-    )
-};
-
-const HeaderComponent = () => {
-    const [sidebarOpen, setSidebarOpen] = useState(false);
-
-    return (
-        <Header sidebarOpen={sidebarOpen} setSidebarOpen={setSidebarOpen} />
-    )
-};
+import Promo from '../../components/Promo'
+import CategoryPreview from '../../components/CategoryPreview'
+import Produk from '../../components/Produk'
 ---
 
 <AdminLayout title="Check Out | Xezar Commerce">
-    <div class="flex h-screen overflow-hidden">
-
-        <SidebarComponent  client:idle/>
-
-        <div class="relative flex flex-col flex-1 overflow-y-auto overflow-x-hidden">
-
-            <HeaderComponent  client:idle/>
-
-            <main>
-
-            </main>
-        </div>
-    </div>
+    <Promo client:idle/>
+    <CategoryPreview client:idle/>
+    <Produk client:idle/>
 </AdminLayout>
